<resources>
    <string name="app_name">CatBook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_cat_list">CatList</string>
    <string name="title_activity_vaccine">Vaccine</string>
    <string name="title_activity_manual">Manual</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_add_cat">AddCat</string>

    <string name="add_data_title">Add this Cat?</string>
    <string name="add_data_message">Are you sure to add this Cat?</string>

    <string name="add_data_title_expenses">Add this Expenses?</string>
    <string name="add_data_message_expenses">Are you sure to add this Expenses?</string>

    <string name="add_data_title_vaccine">Add this Vaccine?</string>
    <string name="add_data_message_vaccine">Are you sure to add this Vaccine?</string>

    <string name="add_data_title_veterinarian">Add this Veterinarian?</string>
    <string name="add_data_message_veterinarian">Are you sure to add this Veterinarian?</string>


    <string name="Name">Name :</string>
    <string name="Gender">Gender :</string>
    <string name="Breed">Breed :</string>
    <string name="Birth">Birth :</string>
    <string name="Weight">Weight :</string>
    <string name="title_activity_cat_detail">CatDetail</string>

    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>

    <string name="title_activity_expenses">Expenses</string>
    <string name="title_activity_expenses_list">ExpensesList</string>
    <string name="title_activity_add_expenses">AddExpenses</string>
    <string name="title_activity_expenses_detail">ExpensesDetail</string>

    <string name="NameExpenses">Name</string>
    <string name="Amount">Amount</string>
    <string name="Detail">Detail</string>
    <string name="Date">Date</string>
    <string name="Type">Type</string>

    <string name="alert_title_expenses">Delete this Expenses?</string>
    <string name="alert_message_expenses">Are you sure to delete this Expenses?</string>

    <string name="alert_title">Delete this Cat?</string>
    <string name="alert_message">Are you sure to delete this Cat?</string>
    <string name="title_activity_cat">Cat</string>

    <string name="title_activity_veterinarian">Veterinarian</string>
    <string name="title_activity_veterinarian_detail">VeterinarianDetail</string>

    <string name="NameV">Name :</string>
    <string name="Last_Name">Last Name :</string>
    <string name="Address">Address :</string>
    <string name="Phone">Phone Number :</string>
    <string name="Email">Email :</string>

    <string name="alert_title_veterinarian">Delete this Veterinarian?</string>
    <string name="alert_message_veterinarian">Are you sure to delete this Veterinarian?</string>
    <string name="title_activity_add_vaccine">AddVaccine</string>
    <string name="title_activity_add_type">AddType</string>
</resources>
