<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="wiangchaibee.catbook.AddCat">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|top"
            android:id="@+id/ADRL">

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/ADET1"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/ADET4"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/ADET2"
                android:layout_below="@+id/ADET1"
                android:layout_toEndOf="@+id/ADTV2" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/ADET3"
                android:layout_below="@+id/ADET2"
                android:layout_toEndOf="@+id/ADTV1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name"
                android:id="@+id/ADTV1"
                android:textSize="20dp"
                android:textColor="#ff000000"
                android:layout_alignBottom="@+id/ADET1"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Gender"
                android:id="@+id/ADTV2"
                android:textColor="#ff000000"
                android:textSize="20dp"
                android:layout_alignBottom="@+id/ADET2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Breed"
                android:id="@+id/ADTV3"
                android:textColor="#ff000000"
                android:textSize="20dp"
                android:layout_alignBottom="@+id/ADET3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Birth"
                android:id="@+id/ADTV4"
                android:textSize="20dp"
                android:textColor="#ff000000"
                android:layout_below="@+id/ADET3"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ADET4"
                android:layout_alignBottom="@+id/ADTV4"
                android:layout_toRightOf="@+id/ADTV4"
                android:layout_alignRight="@+id/ADET3"
                android:layout_alignEnd="@+id/ADET3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weight"
                android:id="@+id/ADTV5"
                android:textSize="20dp"
                android:textColor="#ff000000"
                android:layout_below="@+id/ADTV4"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/ADET5"
                android:layout_alignBottom="@+id/ADTV5"
                android:layout_toEndOf="@+id/ADTV2"
                android:inputType="numberDecimal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="145dp"
                android:id="@+id/ADIM"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_cat"
                android:layout_weight="0.10"
                android:layout_below="@+id/ADTV5"
                android:layout_alignEnd="@+id/ADET2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/ADBT1"
                android:layout_below="@+id/ADIM"
                android:layout_centerHorizontal="true" />


        </RelativeLayout>
    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start" android:name="sarayutwiangchai.catbook.NavigationDrawerFragment"
        tools:layout="@layout/fragment_add_cat" />

</android.support.v4.widget.DrawerLayout>
